upgrade dependencies. other minor changes